# snapdragons-fastapi-service

./: .gitignore  CONTRIBUTORS.md  README.md  app.py  main.py  postman.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
repositories/: product_repo.py
src/: database.py  main.py
src/models/: product.py
tests/: test_greeter.py  test_main.py  test_product.py
